--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,14 @@ services:
   mitmproxy:
     restart: always
     image: mitmproxy/mitmproxy
+    entrypoint: "/mitmproxy_entrypoint.sh"
+    environment:
+      CONF_BASENAME: ${CONF_BASENAME:-mitmproxy}
     command:
       ["mitmdump", "-v", "--proxyauth=${PROXY_AUTH}", "--ignore", "${IGNORE}"]
     volumes:
       - "./certs/:/home/mitmproxy/.mitmproxy/"
+      - "./mitmproxy_entrypoint.sh:/mitmproxy_entrypoint.sh"
     ports:
       - "8081:8080"
 
