Refactor, remove need for traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,26 @@
 services:
+  mitmproxy-transparent:
+    restart: always
+    image: mitmproxy/mitmproxy
+    command:
+      [
+        "mitmdump",
+        "-v",
+        "--mode=upstream:http://mitmproxy:8080",
+        "--showhost",
+        "--ssl-insecure",
+      ]
+    volumes:
+      - "./certs/:/home/mitmproxy/.mitmproxy/"
+    ports:
+      - "8443:8080"
+
   mitmproxy:
     restart: always
     image: mitmproxy/mitmproxy
-    entrypoint: "/mitmproxy_entrypoint.sh"
-    environment:
-      CONF_BASENAME: ${CONF_BASENAME:-mitmproxy}
     command:
       ["mitmdump", "-v", "--proxyauth=${PROXY_AUTH}", "--ignore", "${IGNORE}"]
     volumes:
       - "./certs/:/home/mitmproxy/.mitmproxy/"
-      - "./mitmproxy_entrypoint.sh:/mitmproxy_entrypoint.sh"
     ports:
-      - "8081:8080"
-
-  traefik:
-    image: traefik
-    environment:
-      TRAEFIK_PROVIDERS_FILE_FILENAME: "/traefik-providers.yml"
-    restart: always
-    volumes:
-      - "./traefik.yml:/etc/traefik/traefik.yml"
-      - "./traefik-dynamic.yml:/etc/traefik/traefik-dynamic.yml"
-      - "./certs/:/certs"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    ports:
-      - "8888:8888"
-      - "8443:8443"
       - "8080:8080"
-
-volumes:
-  mitm: {}
